<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data class="AddBinder">
        <variable
            name="viewModel"
            type="com.example.jetpackcomponentsapp.view.model.ObjectViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/background_material_dark_black">

        <LinearLayout
            style="@style/LinearLayoutAddStyle" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/ic_launcher_foreground"/>

                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/add_name"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/add"
                />

        </LinearLayout>

    </RelativeLayout>

</layout>